--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://cledsonmanus.github.io/analyse",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/analyse/",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "pnpm run build && gh-pages -d dist"
