--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,14 @@ jobs:
         run: npm install -g pnpm
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+        working-directory: ./app-analyzer-frontend
       - name: Build
         run: pnpm run build
+        working-directory: ./app-analyzer-frontend
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
+          path: './app-analyzer-frontend/dist'
 
   deploy:
     needs: build
